--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,3 +5,12 @@
   margin: 0 auto;
   font-weight: normal;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: all 0.25s ease;
+}
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
